--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -13,7 +13,7 @@
             SAS
         </a>
     </div>
-    <div class="sidebar-wrapper" style="padding-bottom: 0px" ng-if="auth.Role[0].id === 1">
+    <div class="sidebar-wrapper" style="padding-bottom: 0px" ng-if="auth.Role[0].id === 1 || auth.Role[0].id === 0">
         <ul class="nav" style="margin-top:0px">
             <li class="nav-item" ng-click="go_home()" ng-class="{'active': isactive === 1}">
                 <a class="nav-link" href="">
