--- a/partials/login.html
+++ b/partials/login.html
@@ -23,7 +23,8 @@
                         <form name="loginform">
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="text" class="form-control" ng-model="username" id="username" aria-describedby="emailHelp" required>
+                                <input type="text" class="form-control" ng-model="username" id="username"
+                                    aria-describedby="emailHelp" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
@@ -43,6 +44,25 @@
                         <button type="submit" class="btn btn-info btn-block" ng-click="login()">Login</button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="choose" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Chọn Trang Quản Lý</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info" ng-click="choosepage(1)">Telesale</button>
+                <button type="button" class="btn btn-primary" ng-click="choosepage(2)">Marketing</button>
             </div>
         </div>
     </div>
