--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -87,7 +87,19 @@
                     <p>Danh Sách</p>
                 </a>
             </li>
-            <li class="nav-item" ng-click="go_msetup()" ng-class="{'active': isactive === 12}">
+            <li class="nav-item" ng-click="go_doc()" ng-class="{'active': isactive === 12}">
+                <a class="nav-link" href="">
+                    <i class="material-icons">extension</i>
+                    <p>Chính sách marketing</p>
+                </a>
+            </li>
+            <li class="nav-item" ng-click="go_hd()" ng-class="{'active': isactive === 13}">
+                <a class="nav-link" href="">
+                    <i class="material-icons">cast_connected</i>
+                    <p>Hướng dẫn kết nối</p>
+                </a>
+            </li>
+            <li class="nav-item" ng-click="go_msetup()" ng-class="{'active': isactive === 14}">
                 <a class="nav-link" href="">
                     <i class="material-icons">settings</i>
                     <p>Setup</p>
