--- a/partials/managergroup.html
+++ b/partials/managergroup.html
@@ -121,7 +121,7 @@
                                 </div>
 
                                 <button type="button" class="btn btn-lg btn-primary btn-block" ng-click="createGroup()">
-                                    <i class="material-icons">send</i> Tạo User</button>
+                                    <i class="material-icons">send</i> Tạo Group</button>
                             </form>
                         </div>
                     </div>
